samples/_failures_safe/1760886305_03db9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a4386d9.c: In function ‘main’:
./samples/SAFE/__tmp_4a4386d9.c:150:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  150 |     for (uint32_t i
      |     ^~~
./samples/SAFE/__tmp_4a4386d9.c:150:5: error: expected declaration or statement at end of input
